css/styles.css
@import url('https://fonts.googleapis.com/css?family=Raleway|Roboto+Condensed|Open+Sans');

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  clear: both;
  color: black;
  text-decoration: none;
}

body {
  background: aliceblue;
}

.content-container {
  width: 50vw;
  height: 100vw;
  /*background-color: grey;*/
  margin-left: auto;
  margin-right: auto;
  margin-top: 100px;
}

header {
  height: 70px;
}

.header {
  text-align: left;
  font-family: 'Raleway';
  font-size: 30px;
}

.subheader {
  display: inline-block;
  text-align: left;
  font-family: 'Open Sans';
  font-size: 25px;
  width: 100%;
  /*color: red;*/
  color: #422FB1;
}

.main {
  text-align: left;
  padding-top: 100px;
  padding-bottom: 100px;
  /*background-color: grey;*/
}

.about-me {
  font-size: 35px;
  font-family: 'Open Sans';
}

.projects h1 {
  font-family: 'Open Sans';
  font-size: 20px;
  padding-bottom: 20px;
}

.project {
  width: 100%;
  height: 150px;
  border-radius: 20px;
  margin-bottom: 20px;
  border: 2px solid #422FB1;
  box-shadow: 0px 2px 20px white;
}

.project h1 {
  line-height: 150px;
  text-align: center;
  font-size: 30px;
  font-family: 'Raleway';
}

footer {
  margin-top: 100px;
}

footer h1 {
  font-family: 'Open Sans';
  font-size: 20px;
  padding-bottom: 20px;
}

footer a {
  text-decoration: none;
  display: block;
  font-family: 'Open Sans';
  font-size: 30px;
}

